added navigation and styling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- head is for metadata -->
-    <head>
-        <title>Home Page</title>
-        <link rel="icon" href="images/shark.png">
-        <link rel="stylesheet" href="styles.css">
-    </head> 
-    <!-- body is for content -->
-    <body>
-        <h1>Hello World</h1>
-        <p>This is a paragraph.</p>
-        <img src="movie.jpg" alt="dolphin movie">
-        <br>
-        <a href="https://google.com.au">Go to Google</a>
-    </body>
+<!-- head is for metadata -->
+
+<head>
+    <title>Home Page</title>
+    <link rel="icon" href="images/shark.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<!-- body is for content -->
+
+<body>
+    <!-- nav for navigation -->
+    <nav id="main-nav">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <h1>Hello World</h1>
+    <p>This is a paragraph.</p>
+    <img src="movie.jpg" alt="dolphin movie">
+    <br>
+    <a href="https://google.com.au">Go to Google</a>
+</body>
+
 </html>
