--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,27 @@
         <a href="index.html">Home</a>
         <a href="contact.html">Contact</a>
     </nav>
+    <p>
+        Email us at <a href="mailto:info@example.com">info@example.com</a>
+    </p>
+    <p>
+        Call us on <a href="tel:0400000000">0400000000</a>
+    </p>
+    <p>
+        Find us here <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3417.1399829435077!2d150.93337631188737!3d-31.078032974312958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0a9f48a1d6d02f%3A0x4f9b8d491664adf8!2sTAFE%20NSW%20-%20Tamworth!5e0!3m2!1sen!2sau!4v1740992396019!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </p>
+    <form method="post" action="https://example.com/contact">
+        <label for="first">Your First Name</label><br>
+        <input type="text" name="first name" id="first"><br>
+        <label for="email">Your Email</label><br>
+        <input type="email" name="email" id="email">
+        <!-- Checkbox -->
+        <input type="checkbox" name="preference" id="pref">
+        <label for="pref">Yes, I like spam.</label><br>
+        <button type="submit">Send</button>
+        <button type="reset">Cancel</button>
+    </form>
 </body>
 
 </html>
