starting tiptoe soles project, adding new styles and nav

--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <!-- head is for metadata -->
 
 <head>
-    <title>Home Page</title>
-    <link rel="icon" href="images/shark.png">
+    <title>TipToe Soles</title>
+    <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- body is for content -->
 
 <body>
-    <!-- nav for navigation -->
-    <nav id="main-nav">
+   <header class="main-header">
+    <img src="images/logo.png" class="logo">
+    <form class="site-search">
+        <input type="search" name="keyword" id="keyword" placeholder="Search">
+        <button type="submit">Search</button>
+    </form>
+    <nav class="main-navigation">
         <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
-    <h1>Hello World</h1>
-    <p>This is a paragraph.</p>
-    <img src="movie.jpg" alt="dolphin movie">
-    <br>
-    <a href="https://google.com.au">Go to Google</a>
+   </header>
+   <main></main>
+   <footer></footer>
 </body>
 
 </html>
