--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- head is for metadata -->
-
 <head>
     <title>TipToe Soles</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <!-- body is for content -->
-
 <body>
    <header class="main-header">
     <img src="images/logo.png" class="logo">
+    <nav class="main-navigation">
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+        <a href="products.html">
+            Products
+        </a>
+        <nav class="dropdown-menu">
+            <a href="women.html">Women</a>
+            <a href="men.html">Men</a>
+            <a href="kids.html">Kids</a>
+        </nav>
+        </div>
+        <div class="dropdown">
+        <a href="services.html">
+            Services
+        </a>
+        <nav class="dropdown-menu">
+            <a href="store.html">Find a Store</a>
+            <a href="size.html">Size Guide</a>
+            <a href="gift.html">Gift Cards</a>
+        </nav>
+        </div>
+    </nav>
     <form class="site-search">
         <input type="search" name="keyword" id="keyword" placeholder="Search">
         <button type="submit">Search</button>
     </form>
-    <nav class="main-navigation">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+    <nav class="user-nav">
+        <a href="account.html">Account</a>
+        <a href="wishlist.html">Wishlist</a>
+        <a href="cart.html">Cart</a>
     </nav>
    </header>
    <main></main>
