--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="script.js"></script>
 </head>
 <!-- body is for content -->
 <body>
    <header class="main-header">
+    <button class="nav-button">
+        <span class="sr-only">Menu</span>
+        <i class="fa-solid fa-bars"></i>
+    </button>
     <img src="images/logo.png" class="logo">
     <nav class="main-navigation">
         <a href="index.html">Home</a>
