added responsiveness for mobile

--- a/index.html
+++ b/index.html
@@ -88,19 +88,47 @@
         <div class="card col-4">
             <img class="card-image" src="images/products/pexels1.jpg" alt="ankle boots">
             <div class="card-content">
-                <h3 class="card-title">Casual</h3>
-                <a href="#" class="card-button">Shop Casual</a>
+                <h3 class="card-title">Outwear</h3>
+                <a href="#" class="card-button">Shop Outwear</a>
             </div>
         </div>
         <div class="card col-4">
             <img class="card-image" src="images/products/pexels2.jpg" alt="ankle boots">
             <div class="card-content">
                 <h3 class="card-title">Boots</h3>
-                <a href="#" class="card-button">Shop Heeled Boots</a>
+                <a href="#" class="card-button">Shop Mens Boots</a>
             </div>
         </div>
         <div class="card col-4">
             <img class="card-image" src="images/products/pexels3.jpg" alt="ankle boots">
+            <div class="card-content">
+                <h3 class="card-title">Casual</h3>
+                <a href="#" class="card-button">Shop Casual</a>
+            </div>
+        </div>
+        <div class="card col-3">
+            <img class="card-image" src="images/products/pexels4.jpg" alt="ankle boots">
+            <div class="card-content">
+                <h3 class="card-title">Casual</h3>
+                <a href="#" class="card-button">Shop Casual</a>
+            </div>
+        </div>
+        <div class="card col-3">
+            <img class="card-image" src="images/products/pexels5.jpg" alt="ankle boots">
+            <div class="card-content">
+                <h3 class="card-title">Boots</h3>
+                <a href="#" class="card-button">Shop Ladies Boots</a>
+            </div>
+        </div>
+        <div class="card col-3">
+            <img class="card-image" src="images/products/pexels6.jpg" alt="ankle boots">
+            <div class="card-content">
+                <h3 class="card-title">Formal</h3>
+                <a href="#" class="card-button">Shop Formal</a>
+            </div>
+        </div>
+        <div class="card col-3">
+            <img class="card-image" src="images/products/pexels7.jpg" alt="ankle boots">
             <div class="card-content">
                 <h3 class="card-title">Casual</h3>
                 <a href="#" class="card-button">Shop Casual</a>
