--- a/index.html
+++ b/index.html
@@ -136,7 +136,40 @@
         </div>
     </div>
    </main>
-   <footer></footer>
+   <footer class="main-footer">
+    <div class="footer-container">
+        <nav class="social-nav">
+            <a href="https://facebook.com">
+                <span class="sr-only">Facebook</span>
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+<a href="https://instagram.com">
+                <span class="sr-only">Instagram</span>
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <a href="https://youtube.com">
+                <span class="sr-only">Youtube</span>
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="https://tiktok.com">
+                <span class="sr-only">Tiktok</span>
+                <i class="fa-brands fa-tiktok"></i>
+            </a>
+        </nav>
+        <nav class="footer-nav">
+            <h4>Policies</h4>
+            <a href="#">Delivery</a>
+            <a href="#">Exchanges</a>
+            <a href="#">Returns</a>
+        </nav>
+        <nav class="footer-nav">
+            <h4>Site Navigation</h4>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+   </footer>
 </body>
 
 </html>
