--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- head is for metadata -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="icon" href="images/shark.png">
+    <title>TipToe Soles Contact Us</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </head>
-
-<body>
-    <nav id="main-nav">
+<!-- body is for content -->
+<body class="contact-page">
+   <header class="main-header">
+    <button class="nav-button">
+        <span class="sr-only">Menu</span>
+        <i class="fa-solid fa-bars"></i>
+    </button>
+    <img src="images/logo.png" class="logo">
+    <nav class="main-navigation">
         <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
+        <div class="dropdown">
+        <a href="products.html">
+            Products
+        </a>
+        <nav class="dropdown-menu">
+            <a href="women.html">Women</a>
+            <a href="men.html">Men</a>
+            <a href="kids.html">Kids</a>
+        </nav>
+        </div>
+        <div class="dropdown">
+        <a href="services.html">
+            Services
+        </a>
+        <nav class="dropdown-menu">
+            <a href="store.html">Find a Store</a>
+            <a href="size.html">Size Guide</a>
+            <a href="gift.html">Gift Cards</a>
+        </nav>
+        </div>
     </nav>
-    <p>
-        Email us at <a href="mailto:info@example.com">info@example.com</a>
-    </p>
-    <p>
-        Call us on <a href="tel:0400000000">0400000000</a>
-    </p>
-    <p>
-        Find us here <br>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3417.1399829435077!2d150.93337631188737!3d-31.078032974312958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0a9f48a1d6d02f%3A0x4f9b8d491664adf8!2sTAFE%20NSW%20-%20Tamworth!5e0!3m2!1sen!2sau!4v1740992396019!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </p>
-    <form method="post" action="https://example.com/contact">
-        <label for="first">Your First Name</label><br>
-        <input type="text" name="first name" id="first"><br>
-        <label for="email">Your Email</label><br>
-        <input type="email" name="email" id="email">
-        <!-- Checkbox -->
-        <input type="checkbox" name="preference" id="pref">
-        <label for="pref">Yes, I like spam.</label><br>
-        <button type="submit">Send</button>
-        <button type="reset">Cancel</button>
+    <form class="site-search">
+        <input type="search" name="keyword" id="keyword" placeholder="Search">
+        <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <span class="sr-only">Search</span>
+        </button>
     </form>
+    <nav class="user-nav">
+        <a href="account.html"> 
+            <i class="fa-solid fa-user"></i>
+            <span class="sr-only">Account</span>
+        </a>
+        <a href="wishlist.html">
+            <i class="fa-solid fa-heart"></i>
+            <span class="sr-only">Wishlist</span>
+        </a>
+        <a href="cart.html">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="sr-only">Cart</span>
+        </a>
+    </nav>
+   </header>
+   <main>
+    <div class="featured-grid">
+        <div class="card col-4">
+            <div class="card-content">
+                <h3 class="card-title">Find Us Here</h3>
+                <p>
+                    <address>
+                        100 Main Street<br>
+                        Sydney NSW 2000</br>
+                        Australia
+                    </address>
+                </p>
+                <a href="tel:0293001234">Call Us</a>
+            </div>
+        </div>
+        <div class="card col-4">
+            <div class="card-content">
+                <h3 class="card-title">Where We Are</h3>
+                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4200.234562368059!2d150.93337631188749!3d-31.07803297431278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0a9f48a1d6d02f%3A0x4f9b8d491664adf8!2sTAFE%20NSW%20-%20Tamworth!5e1!3m2!1sen!2sau!4v1748340141547!5m2!1sen!2sau" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <div class="card col-4">
+            <div class="card-content">
+                <h3 class="card-title">Feedback</h3>
+                <form id="contact-form" method="post" action="https://example.com/form">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Your Name">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Your Email">
+                    <label for="message">Message</label>
+                    <textarea cols="40" rows="5" name="message" id="message" placeholder="Type Your Message Here"></textarea>
+                <button type="submit" class="card-button">Send</button>
+                </form>
+            </div>
+    </div>
+   </main>
+   <footer class="main-footer">
+    <div class="footer-container">
+        <nav class="social-nav">
+            <a href="https://facebook.com">
+                <span class="sr-only">Facebook</span>
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+<a href="https://instagram.com">
+                <span class="sr-only">Instagram</span>
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <a href="https://youtube.com">
+                <span class="sr-only">Youtube</span>
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="https://tiktok.com">
+                <span class="sr-only">Tiktok</span>
+                <i class="fa-brands fa-tiktok"></i>
+            </a>
+        </nav>
+        <nav class="footer-nav">
+            <h4>Policies</h4>
+            <a href="#">Delivery</a>
+            <a href="#">Exchanges</a>
+            <a href="#">Returns</a>
+        </nav>
+        <nav class="footer-nav">
+            <h4>Site Navigation</h4>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+   </footer>
 </body>
 
 </html>
