updating style, and creating link to home

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,8 @@
         <span class="sr-only">Menu</span>
         <i class="fa-solid fa-bars"></i>
     </button>
-    <img src="images/logo.png" class="logo">
+    <a href="index.html"><img src="images/logo.png" class="logo" alt="tiptoe soles logo">
+    </a>
     <nav class="main-navigation">
         <a href="index.html">Home</a>
         <div class="dropdown">
