--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
             <h4>Site Navigation</h4>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a class="active" href="contact.html">Contact</a>
         </nav>
     </div>
    </footer>
