--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </nav>
         <nav class="footer-nav">
             <h4>Site Navigation</h4>
-            <a href="index.html">Home</a>
+            <a class="active" href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
