--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
         <nav class="footer-nav">
             <h4>Site Navigation</h4>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a class="active" href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
     </div>
